@@ -1,32 +1,28 @@
 from galaxy.app import UniverseApplication as OrigUniverseApplication
 
-#
+
 from bl.vl.kb import KnowledgeBase as KB
 
-class UniverseApplication(OrigUniverseApplication):
-  def __init__(self, **kwargs):
-    # FIXME just a quick and dirty fix...
 
-    omero_host   = kwargs.get('omero_default_host')
-    omero_user   = kwargs.get('omero_default_user')
+class UniverseApplication(OrigUniverseApplication):
+  
+  def __init__(self, **kwargs):
+    omero_host = kwargs.get('omero_default_host')
+    omero_user = kwargs.get('omero_default_user')
     omero_passwd = kwargs.get('omero_default_passwd')
     self.kb = KB(driver='omero')(omero_host, omero_user, omero_passwd)
-
     super(UniverseApplication, self).__init__(**kwargs)
-
-    #-- patch in omero specific configurations for future reference
     self.config.omero_default_host = kwargs.get('omero_default_host')
     self.config.omero_default_user = kwargs.get('omero_default_user')
     self.config.omero_default_passwd = kwargs.get('omero_default_passwd')
     self.config.vl_loglevel = kwargs.get('vl_loglevel', 'INFO')
     self.config.vl_import_enabled_users = kwargs.get('vl_import_enabled_users')
 
-
   @property
   def known_studies(self):
     studies = self.kb.get_objects(self.kb.Study)
     if studies:
-      return [(s.label, s.description) if s.description else (s.label, '') for s in studies]
+      return [(s.label, s.description or '') for s in studies]
     else:
       return []
 
